--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<img class="_idGenObjectAttribute-1 _idGenObjectAttribute-2" src="index-web-resources/image/Asset_20-8.png" alt="" />
 		</div>
 		<div id="_idContainer001">
-			<img class="_idGenObjectAttribute-1 _idGenObjectAttribute-2" src="index-web-resources/image/1.png" alt="" />
+			<a href="https://vudesign82.github.io/vunguyen_designgraphic/" target="_blank"><img class="_idGenObjectAttribute-1 _idGenObjectAttribute-2" src="index-web-resources/image/1.png" alt="" /></a>
 		</div>
 		<div id="_idContainer002">
 			<img class="_idGenObjectAttribute-1 _idGenObjectAttribute-2" src="index-web-resources/image/Asset_2-8.png" alt="" />
