--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<meta charset="utf-8" />
-		<title>index</title>
+		<title>CV Nguyen Vu</title>
 		<link href="index-web-resources/css/idGeneratedStyles.css" rel="stylesheet" type="text/css" />
 		<script src="index-web-resources/script/FontData.js" type="text/javascript"></script>
 		<script>function onDOMContentLoaded() { window.top.onFrameDOMLoaded(); } document.addEventListener("DOMContentLoaded", onDOMContentLoaded, false);</script>
